# strace2seccomp

./: .gitignore  .gitmodules  0001-changed-version.patch  CMakeLists.txt  Makefile  MindMap  README.md  TODO.md  Vagrantfile  algorithms_pseudocpp_code.cpp  fitthesis.cls  inspiration  maybe_include.txt  mindmap.vym  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex  xtamas01-01-kapitoly-chapters.tex  xtamas01-20-literatura-bibliography.bib  xtamas01-30-prilohy-appendices.tex  xtamas01-auto-seccomp-generator-01-kapitoly-chapters.tex  xtamas01-auto-seccomp-generator-20-literatura-bibliography.bib  xtamas01-auto-seccomp-generator-30-prilohy-appendices.tex  xtamas01-auto-seccomp-generator.tdo  xtamas01-auto-seccomp-generator.tex  xtamas01.tex
.github/workflows/: ccpp.yml
Presentation/: Makefile  beamerouterthemeFIT.sty  bibliography.bib  prezentace.tex
Presentation-final/: prezentace.bib  prezentace.tex
QA results/fuzzing_out/: plot.sh  svg2pdf.sh
QA results/fuzzing_out/outputFiles/fuzzer_master/.synced/: fuzzer_s01
QA results/fuzzing_out/outputFiles/fuzzer_master/queue/: id:000003,src:000000,op:flip1,pos:0,+cov  id:000005,src:000000,op:flip1,pos:2,+cov  id:000006,src:000000,op:flip1,pos:3,+cov  id:000007,src:000000,op:flip1,pos:3,+cov  id:000008,src:000000,op:flip1,pos:4  id:000012,src:000000,op:flip1,pos:6,+cov  id:000013,src:000000,op:flip1,pos:7,+cov  id:000016,src:000000,op:flip1,pos:7  id:000018,src:000000,op:flip1,pos:8,+cov  id:000020,src:000000,op:flip1,pos:9,+cov  id:000022,src:000000,op:flip1,pos:10,+cov  id:000023,src:000000,op:flip1,pos:11,+cov  id:000026,src:000000,op:flip1,pos:12,+cov  id:000027,src:000000,op:flip1,pos:13,+cov  id:000033,src:000000,op:flip1,pos:21,+cov  id:000041,src:000000,op:flip1,pos:30  id:000045,src:000000,op:flip1,pos:39  id:000052,src:000000,op:flip1,pos:48,+cov  id:000054,src:000000,op:flip1,pos:48  id:000057,src:000000,op:flip1,pos:51  id:000060,src:000000,op:flip1,pos:58,+cov  id:000062,src:000000,op:flip1,pos:82  id:000064,src:000000,op:flip1,pos:84,+cov  id:000071,src:000000,op:flip1,pos:104,+cov  id:000074,src:000000,op:flip1,pos:107  (+971 more)
QA results/fuzzing_out/outputFiles/fuzzer_s03/: fuzz_bitmap  fuzzer_stats
Results/qa_results/fuzzing_out/: unparsed_lines.st2se
bib-styles/: englishiso.bst
doc/man/man.1/: st2se.1
obrazky-figures/: Diagram1.dia  Diagram1.tex  architecture.tex  architecture0.tex  bpf_cmd_scheme.tex  mytikz.tex  system_call_diagram.eps  test_script_architecture.tex
obrazky-figures/class/: algo.dia  algo.dia~  arg_sc.dia  arg_sc.dia~  output.dia  params.dia  params.dia~  svg2pdf.sh
obrazky-figures/master/: index.html  index.html.orig
obrazky-figures/thread_1/: index.html  index.html.orig
obrazky-figures/thread_2/: index.html  index.html.orig
obrazky-figures/thread_3/: index.html  index.html.orig
qa_results/fuzzing_out/: startup.sh
qa_results/fuzzing_out/inputFiles/: in1
qa_results/fuzzing_out/outputFiles/: .cur_input
qa_results/fuzzing_out/outputFiles/fuzzer_s01/: .cur_input  fuzzer_stats
seccomp_template/: template.c  template.c.begin  template.c.end  template.c.thread
source_examples/: attacker.c  exportedSource.c  libseccomp.c  raw_bpf.c  victim.c
src/: CMakeLists.txt  Makefile  Makefile.backup  algorithm.cpp  algorithm.hpp  algorithm_advanced.cpp  algorithm_advanced.hpp  algorithm_strict.cpp  algorithm_strict.hpp  algorithm_weak.cpp  algorithm_weak.hpp  algorithms.cpp  algorithms.hpp  argparse.cpp  argparse.hpp  argparse_test.cpp  astyle_script.sh  astylerc  cpp11_support.hpp  cpp14_support.hpp  doxyfile  generator.cpp  generator.hpp  generator_test.cpp  ids.cpp  ids.hpp  ids_test.cpp  main.cpp  nautilus.strace2  optimizer.cpp  optimizer.hpp  output.cpp  output.hpp  outputCPP.cpp  outputCPP.hpp  outputCPP_test.cpp  params_test.cpp  parser.cpp  parser.hpp  states.cpp  (+9 more)
src/include/: README.md
src/include/Mpark.Variant/: 0001.variant.hpp.patch  variant.hpp
testdata/: dataset.reduced
testing_results/fuzzing_out/outputFiles/fuzzer_master/: fuzz_bitmap  fuzzer_stats
testing_results/fuzzing_out/outputFiles/fuzzer_s02/: fuzzer_stats
testsuite/: README.md  README.txt  coreutils.Makefile.in.patch  coreutils.cp.c.patch  coreutils.cp.c.patch.backup  coreutils.src_rm.c.patch  cp.tests.2.patch  cp.tests.patch  find.Makefile.in.patch  find.ftsfind.c.patch  script.py  script.sh  setEnv.sh  source.cpp  testsuite.strace
testsuite/fopen/: fopen.c  fopen.set.19570
testsuite/module_testing/: Makefile  algorithm.cpp  algorithm.hpp  algorithm_advanced.cpp  algorithm_advanced.hpp  algorithm_strict.cpp  algorithm_strict.hpp  algorithm_weak.cpp  algorithm_weak.hpp  argparse.cpp  argparse.hpp  argparse_test.cpp  createSimlinks.sh  generator.cpp  generator.hpp  generator_test.cpp  ids.cpp  ids.hpp  ids_test.cpp  optimizer.cpp  optimizer.hpp  output.cpp  output.hpp  outputCPP.cpp  outputCPP.hpp  outputCPP_test.cpp  params_test  states.cpp  states.hpp  states_test.cpp  straceparser.cpp  straceparser.hpp  straceparser_actions.hpp  straceparser_grammar.hpp  test_main.cpp
(+7476 files in other folders)
